# DetNQS

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml
benchmark/: FCIDUMP.py  cr2.py
benchmark/FCIDUMP/: C2H4O_sto3g.FCIDUMP  C3H8_sto3g.FCIDUMP  CH4_sto3g.FCIDUMP  H2O_631g.FCIDUMP  H2O_sto3g.FCIDUMP  H2_631g_2.00.FCIDUMP  Li2O_sto3g.FCIDUMP  LiCl_sto3g.FCIDUMP
benchmark/FCIDUMP/Cr2/: Cr2_24e30o.FCIDUMP
benchmark/FCIDUMP/H2O_ccpvdz/: H2O_ccpvdz_1.0re.FCIDUMP  H2O_ccpvdz_1.5re.FCIDUMP  H2O_ccpvdz_2.0re.FCIDUMP  H2O_ccpvdz_2.5re.FCIDUMP  H2O_ccpvdz_3.0re.FCIDUMP
benchmark/FCIDUMP/N2_ccpvdz/: N2_ccpvdz_2.118B.FCIDUMP  N2_ccpvdz_2.400B.FCIDUMP  N2_ccpvdz_2.700B.FCIDUMP  N2_ccpvdz_3.000B.FCIDUMP  N2_ccpvdz_3.600B.FCIDUMP  N2_ccpvdz_4.200B.FCIDUMP
benchmark/scripts/: FCIDUMP.py  FCI_coefficients_distribution.ipynb  spin_benchmark.ipynb
csrc/: CMakeLists.txt
csrc/bridge/: bridge.cpp
csrc/detnqs/determinant/: det.hpp  det_batch.hpp  det_enum.hpp  det_ops.hpp  det_space.hpp
csrc/detnqs/hamiltonian/: build_ham.hpp  ham_eff.hpp  ham_eval.hpp  ham_utils.hpp  local_conn.hpp
csrc/detnqs/integral/: hb_table.hpp  integral_mo.hpp  integral_so.hpp
csrc/detnqs/utils/: bit_utils.hpp  constants.hpp  types.hpp
csrc/ffi/: ffi_module.cpp  logdet_cpu.cc  logdet_cuda.cu
csrc/lever/determinant/: det.hpp  det_batch.hpp  det_enum.hpp  det_ops.hpp  det_space.hpp
csrc/lever/hamiltonian/: build_ham.hpp  ham_block.hpp  ham_conn.hpp  ham_eff.hpp  ham_eval.hpp  ham_utils.hpp  local_conn.hpp
csrc/lever/integral/: hb_table.hpp  integral_mo.hpp  integral_so.hpp
csrc/lever/utils/: bit_utils.hpp  constants.hpp  types.hpp
csrc/src/determinant/: det_batch.cpp  det_enum.cpp  det_ops.cpp  det_space.cpp
csrc/src/hamiltonian/: build_ham.cpp  ham_block.cpp  ham_conn.cpp  ham_eff.cpp  ham_eval.cpp  ham_utils.cpp  local_conn.cpp
csrc/src/integral/: hb_table.cpp  integral_mo.cpp
detnqs/: __init__.py  core.py  core.pyi  driver.py  state.py  system.py
detnqs/analysis/: __init__.py  callbacks.py  checkpoint.py  metrics.py
detnqs/models/: __init__.py  mappers.py  parametrizers.py  slater2nd.py  slogdet.py  utils.py
detnqs/operator/: __init__.py  functional.py  gpu_kernel.py  hamiltonian.py  kernel.py
detnqs/space/: __init__.py  detspace.py  selector.py
detnqs/utils/: __init__.py  det_utils.py  jax_utils.py
examples/: experiments.ipynb  model_hamiltonian.ipynb  model_space_convergence.ipynb  reproduce.py  run_PES.py  run_evolution.ipynb  run_evolution.py  run_evolution_full.ipynb  run_pt2.py  run_resume.py  run_scan.py  run_single.py  test_logdet.py
lever/: __init__.py  analysis.py  config.py  core.py  core.pyi  driver.py  dtypes.py  solver.py  state.py  system.py
lever/analysis/: __init__.py  callbacks.py  checkpoint.py  evaluator.py  exact.py  fci.py  io.py  mcmc.py  metrics.py  plotting.py  posthoc.py  runtime.py  trace.py
lever/engine/: __init__.py  config.py  context.py  evaluator.py  features.py  geometry.py  gradient.py  hamiltonian.py  inner.py  kernels.py  operator.py  physics.py  step.py  utils.py  vqs.py
lever/evolution/: __init__.py  base.py  scores.py  selectors.py  strategies.py
lever/interface/: __init__.py  builder.py  metadata.py  pyscf_backend.py  pyscf_driver.py
lever/models/: __init__.py  backflow.py  base.py  jastrow.py  mappers.py  parametrizers.py  pfaffian.py  product.py  rbm.py  slater.py  slater2nd.py  slogdet.py  utils.py
lever/models/slater/: __init__.py  build.py  encoders.py  networks.py  orbitals.py
lever/monitor/: __init__.py  logger.py  plotting.py  storage.py  summary.py
lever/operator/: __init__.py  functional.py  gpu_kernel.py  hamiltonian.py  kernel.py
lever/optimizers/: __init__.py  base.py  direction.py  factories.py  linalg.py  rule.py
lever/plotting/: __init__.py  convergence.py
lever/space/: __init__.py  detspace.py  selector.py
lever/utils/: __init__.py  config_utils.py  convergence.py  det_utils.py  dtypes.py  features.py  jax_utils.py  logger.py  monitor.py  occupations.py  plot_utils.py  pytree.py  space.py  space_utils.py
lever/workflow/: __init__.py  compiler.py  controller.py  fitter.py
tests/cpp/: CMakeLists.txt  test_determinant.cpp  test_hamiltonian.cpp  test_integral.cpp
tests/python/: test_logdet.py
