# file: pyproject.toml
[build-system]
requires = [
  "scikit-build-core>=0.10",
  "nanobind>=2.8",
  "numpy>=2.1",
  "jax>=0.7.2",
  "jaxlib>=0.7.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "lever"
version = "0.0.1.dev0"
description = "LEVER: determinant-driven QC toolkit (development snapshot)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Zheng (Alex) Che", email = "wsmxcz@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]


dependencies = [
  "numpy>=2.1",
  "scipy>=1.14",
  "tqdm",
  "matplotlib",
  "rich",
  "pyyaml",
  "hydra-core",
  "jax>=0.7",
  "jaxlib>=0.7",
  "flax>=0.12",
  "optax>=0.2",
]

[project.optional-dependencies]

dev = [
  "pytest",
  "pytest-benchmark",
  "ipykernel",
]

[tool.scikit-build]
wheel.packages = ["lever"]

sdist.include = [
  "CMakeLists.txt",
  "csrc/**",
  "benchmark/**",
  "examples/**",
  "tests/**",
  "LICENSE",
  "README.md",
]